修改/rpa/in_selector接口
