# docs/swagger.json
@@ -1389,7 +1389,7 @@
         },
         "/rpa/{id}/in_selector": {
             "post": {
-                "description": "1. 当RPAAgent返回元素拾取结果时进行回调，即用户选择了某一个界面元素\n2. 使用`POST`方法进行回调\n3. 回调过程中将在请求体中包含以下内容\n\n    ```json\n    {\n        \"id\": \"rpa-01\",               // agent id\n        \"ts\": 1689576608,             // 时间戳\n        \"cost\": 10,                   // 耗时（秒）\n        \"code\": 1,                    // 状态码，1为成功，非1为失败\n        \"msg\": \"abc\",                 // 错误信息\n        \"content\": \"\u003cabc /\u003e\",         // 元素拾取内容\n        \"image_uri\": \"/rpa/files/...\" // 拾取元素图像获取uri\n    }\n    ```",
+                "description": "1. 当RPAAgent返回元素拾取结果时进行回调，即用户选择了某一个界面元素\n2. 使用`POST`方法进行回调\n3. 回调过程中将在请求体中包含以下内容\n\n    ```json\n    {\n        \"id\": \"rpa-01\",               // agent id\n        \"ts\": 1689576608,             // 时间戳\n        \"cost\": 10,                   // 耗时（秒）\n        \"code\": 1,                    // 状态码，1为成功，非1为失败\n        \"msg\": \"abc\",                 // 错误信息\n        \"content\": \"\u003cabc /\u003e\",         // 元素拾取内容\n        \"imageUri\": \"/rpa/files/...\", // 拾取元素图像获取uri\n        \"requestID\": \"20230728...\"    // 请求ID\n    }\n    ```",
                 "consumes": [
                     "application/json"
                 ],
@@ -2952,6 +2952,11 @@
                     "description": "回调地址",
                     "type": "string",
                     "example": "https://www.baidu.com"
+                },
+                "requestId": {
+                    "description": "请求ID",
+                    "type": "string",
+                    "example": "20230728..."
                 }
             }
         },
